--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,14 @@ dependencies:
   permission_handler: ^10.2.0
   path_provider: ^2.0.11
   android_alarm_manager_plus: ^2.0.7
-  flutter_local_notifications: ^9.7.0
+  flutter_local_notifications: ^16.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   rxdart: ^0.27.7
-  timezone: ^0.8.0
   flutter_launcher_icons: ^0.11.0
+  overlay_support: ^2.0.4
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/pacman.wav
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
